KUBERNETES/Frontend/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: familyclub-frontend
  namespace: production
  labels:
    app.kubernetes.io/name: familyclub-frontend
    app.kubernetes.io/part-of: familyclub
    app.kubernetes.io/component: frontend
    app.kubernetes.io/environment: production
spec:
  replicas: 1
  revisionHistoryLimit: 6
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: familyclub-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: familyclub-frontend
        app.kubernetes.io/version: "1.0"
      annotations:
        image-digest: "sha256:0b37efd3a24e0c1fff5450aa13d6c32a754ad01903c08f8d5375c1efb807f871"
        build-date: "2026-07-17T19:33:38+00:00"
        commit-hash: "5ea0a6602ac433c3c9cd5f2d8a3598137a932297"
        branch: "DeploymentTest5"
        repository: "https://github.com/Metra638/FamilyClub.WebAPI1"
    spec:
      serviceAccountName: frontend
      imagePullSecrets:
      - name: dockerhub-secret
      terminationGracePeriodSeconds: 60
      containers:
      - name: frontend
        image: metra638/test1@sha256:03e4311633f0809bac6a61d1af7534db3e649a1df53e28a6256d6bf624e51c66   # заменяется pipeline
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          protocol: TCP
        # Ресурсы (requests/limits) не указаны намеренно:
        # - Кластер имеет жёсткие ограничения по CPU/памяти, это приводит к "Pending".
        startupProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 30
        livenessProbe:
          tcpSocket:
            port: 3000
          timeoutSeconds: 5
          periodSeconds: 15
        readinessProbe:
          tcpSocket:
            port: 3000
          timeoutSeconds: 5
          periodSeconds: 5
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: RuntimeDefault
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 15"]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: production
  labels:
    app.kubernetes.io/name: familyclub-frontend
spec:
  selector:
    app.kubernetes.io/name: familyclub-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      appProtocol: http
  type: ClusterIP
