KUBERNETES/Frontend/frontend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: production
  labels:
    app.kubernetes.io/name: familyclub-frontend
    app.kubernetes.io/part-of: familyclub
    app.kubernetes.io/component: frontend
    app.kubernetes.io/environment: production
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: familyclub-frontend
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 3000
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: familyclub-backend
      namespaceSelector:
        matchLabels:
          app.kubernetes.io/environment: production
    ports:
    - protocol: TCP
      port: 80
